--- a/smart-card-reader/backend/Cargo.toml
+++ b/smart-card-reader/backend/Cargo.toml
@@ -10,8 +10,12 @@ axum = { version = "0.7", features = ["ws"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 encoding_rs = "0.8"
+unicode-normalization = "0.1"
 anyhow = "1.0"
 log = "0.4"
 env_logger = "0.10"
 tower-http = { version = "0.5", features = ["cors"] }
 base64 = "0.21"
+eframe = "0.31"
+image = { version = "0.25", default-features = false, features = ["jpeg"] }
+chrono = "0.4"
