--- a/smart-card-reader/backend/Cargo.toml
+++ b/smart-card-reader/backend/Cargo.toml
@@ -16,6 +16,7 @@ log = "0.4"
 env_logger = "0.10"
 tower-http = { version = "0.5", features = ["cors"] }
 base64 = "0.21"
+toml = "0.8"
 eframe = "0.31"
 image = { version = "0.25", default-features = false, features = ["jpeg"] }
 chrono = "0.4"
