--- a/smart-card-reader/backend/config.toml
+++ b/smart-card-reader/backend/config.toml
@@ -5,12 +5,32 @@
 
 [server]
 # WebSocket server binding address
-# Use "0.0.0.0" to allow external connections
+# ⚠️ WARNING: Use "127.0.0.1" for localhost only (RECOMMENDED)
+# Using "0.0.0.0" exposes server to external networks - SECURITY RISK!
 host = "127.0.0.1"
 port = 8182
 
-# Allow all CORS origins (disable for production with specific origins)
+# CORS Configuration
+# ⚠️ SECURITY: Set cors_allow_all = false in production!
 cors_allow_all = true
+
+# Allowed CORS origins (used when cors_allow_all = false)
+# ⚠️ SECURITY: For production, use environment variable instead:
+#   export ALLOWED_ORIGINS="https://app.com,https://www.app.com"
+# Config file values are used if env var not set (useful for development)
+allowed_origins = [
+    "http://localhost:3000",
+    "https://localhost:3000",
+    # "https://your-production-app.com",
+]
+
+# TLS/SSL Configuration for secure WebSocket (wss://)
+# ⚠️ PRODUCTION: Enable TLS for secure communication over public networks
+enable_tls = false
+# Path to TLS certificate file (PEM format)
+tls_cert_path = "certs/cert.pem"
+# Path to TLS private key file (PEM format)
+tls_key_path = "certs/key.pem"
 
 [output]
 format = "standard"
@@ -63,6 +83,54 @@ use_system_fonts = true
 [logging]
 # Log level: "trace" | "debug" | "info" | "warn" | "error"
 level = "info"
+
+[security]
+# WebSocket Authentication
+# Enable API key authentication for WebSocket connections
+enable_authentication = false
+
+# API keys for authentication (comma-separated in env var)
+# ⚠️ SECURITY: NEVER commit real API keys to version control!
+# For production, use environment variable instead:
+#   export API_KEYS="key1-secret-here,key2-secret-here"
+# Config file values are used if env var not set (useful for development with dummy keys)
+api_keys = []
+
+# API key header name (clients must send this header)
+api_key_header = "X-API-Key"
+
+# PII Data Encryption
+# Enable AES-256-GCM encryption for sensitive PII data before transmission
+enable_encryption = false
+
+# List of field names to encrypt (empty = encrypt all fields)
+# ⚠️ SECURITY: Encryption key MUST be set via environment variable:
+#   export ENCRYPTION_KEY=$(openssl rand -base64 32)
+# Recommended sensitive fields for encryption:
+encrypted_fields = [
+    "Citizenid",
+    "Th_Firstname",
+    "Th_Lastname",
+    "full_name_en",
+    "Address",
+]
+
+# Rate Limiting
+# Prevent abuse and ensure fair resource allocation
+enable_rate_limiting = false
+
+# Maximum requests per time window (per IP address)
+rate_limit_requests = 60
+
+# Time window in seconds for rate limiting
+rate_limit_window_secs = 60
+
+# Maximum concurrent connections per IP address
+rate_limit_max_connections = 5
+
+# Audit Logging
+# Record security events for compliance and forensics
+enable_audit_logging = false
 
 [card]
 # SELECT APDU for Thai ID applet (hex string)
