--- a/smart-card-reader/backend/config.toml
+++ b/smart-card-reader/backend/config.toml
@@ -144,9 +144,13 @@ enable_audit_logging = false
 select_apdu = "00A4040008A000000054480001"
 
 # Connection retry settings
-retry_attempts = 5
-retry_delay_ms = 1000
-card_settle_delay_ms = 1000
+retry_attempts = 8              # Increased from 5 for better stability
+retry_delay_ms = 1500           # Increased from 1000ms for more reliable connection
+card_settle_delay_ms = 1500     # Increased from 1000ms to give card more time to stabilize
+
+# Read retry settings (per connection attempt)
+read_retry_attempts = 8         # Increased from 5 for better data reading
+read_retry_delay_ms = 800       # Increased from 500ms for more reliable reads
 
 # Field APDU commands
 # Each field has: name, apdu (hex), required (optional, default true)
